EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef struct
{
    int    id;              // Automatically generated unique object id
    int    model_id;        // Id to control what 3D model to represent the vehicle - see carModelsFiles_[] in scenarioenginedll.cpp
    int    ctrl_type;       // 0: DefaultController 1: External. Further values see Controller::Type enum
    double timestamp;       // Not used yet (idea is to use it to interpolate position for increased sync bewtween simulators)
    double x;               // global x coordinate of position
    double y;               // global y coordinate of position
    double z;               // global z coordinate of position
    double h;               // heading/yaw in global coordinate system
    double p;               // pitch in global coordinate system
    double r;               // roll in global coordinate system
    id_t   roadId;          // road ID
    id_t   junctionId;      // Junction ID (-1 if not in a junction)
    double t;               // lateral position in road coordinate system
    int    laneId;          // lane ID
    double laneOffset;      // lateral offset from lane center
    double s;               // longitudinal position in road coordinate system
    double speed;           // speed
    double centerOffsetX;   // x coordinate of bounding box center relative object reference point (local coordinate system)
    double centerOffsetY;   // y coordinate of bounding box center relative object reference point (local coordinate system)
    double centerOffsetZ;   // z coordinate of bounding box center relative object reference point (local coordinate system)
    double width;           // width
    double length;          // length
    double height;          // height
    int    objectType;      // Main type according to entities.hpp / Object / Type
    int    objectCategory;  // Sub category within type, according to entities.hpp / Vehicle, Pedestrian, MiscObject / Category
    double wheel_angle;     // Steering angle of the wheel
    double wheel_rot;       // Rotation angle of the wheel
    int    visibilityMask;  // bitmask according to Object::Visibility (1 = Graphics, 2 = Traffic, 4 = Sensors)
} SE_ScenarioObjectState;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    // 3 for RGB/BGR
    int            pixelFormat;  // 0x1907=RGB (GL_RGB), 0x80E0=BGR (GL_BGR)
    unsigned char *data;
} SE_Image;  // Should be synked with CommonMini/OffScreenImage
    // Basic interface
    //

    /**
            Add a search path for OpenDRIVE and 3D model files
            Needs to be called prior to SE_Init()
            @param path Path to a directory
            @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_AddPath(const char *path);
    /**
            Clear all search paths for OpenDRIVE and 3D model files
            Needs to be called prior to SE_Init()
    */
    SE_DLL_API void SE_ClearPaths();
    /**
            Specify scenario logfile (.txt) file path,
            optionally including directory path and/or filename
            Specify only directory (end with "/" or "\") to let esmini set default filename
            Specify only filename (no leading "/" or "\") to let esmini set default directory
            Set "" to disable logfile
            examples:
              "../logfile.txt" (relative current directory)
              "c:/tmp/esmini.log" (absolute path)
              "my.log" (put it in current directory)
              "c:/tmp/" (use default filename)
              "" (prevent creation of logfile)
            Note: Needs to be called prior to calling SE_Init()
            @param path Logfile path
    */
    SE_DLL_API void SE_SetLogFilePath(const char *logFilePath);
    /**
            Specify scenario recording (.dat) file path,
            optionally including directory path and/or filename
            Specify only directory (end with "/" or "\") to let esmini set default filename
            Specify only filename (no leading "/" or "\") to let esmini set default directory
            Set "" to use default .dat filename
            examples:
              "../my_sim.dat" (relative current directory)
              "c:/tmp/esmini.dat" (absolute path)
              "my_sim.dat" (put it in current directory)
              "c:/tmp/" (use default filename)
              "" (use current directory and default .dat filename)
            Note: Needs to be called prior to calling SE_Init()
            @param path Recording (.dat) file path
    */
    SE_DLL_API void SE_SetDatFilePath(const char *datFilePath);
    /**
    Get seed that esmini uses for current session. It can then be re-used
    in order to achieve repeatable results (for actions that involes some
    degree of randomness, e.g. TrafficSwarmAction).
    @return seed number
    */
    SE_DLL_API unsigned int SE_GetSeed();
    /**
            Set seed that will be used by esmini random number generator.
            Using same seed will ensure same result.
            Note: Also timesteps has to be equal. Make sure to use SE_StepDT()
            with fixed timestep, or at least same sequence of dt each run.
            @param seed number
    */
    SE_DLL_API void SE_SetSeed(unsigned int seed);
    /**
    Set option. The option will be unset on next scenario run. If persistence is required check SE_SetOptionPersistent.
    @param name the name of the option to be set
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetOption(const char *name);
    /**
    Unset option
    @param name the name of the option to be unset
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_UnsetOption(const char *name);
    /**
    Set option value. The option's value will be unset on next scenario run. If persistence is required check SE_SetOptionValuePersistent
    @param name the name of the option to be set
    @param value the value to assign to the option
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetOptionValue(const char *name, const char *value);
    /**
    Set option persistently. The option will remain over multiple scenario runs, until lib is reloaded.
    @param name the name of the option to be set
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetOptionPersistent(const char *name);
    /**
    Set option value persistently. The option value will remain over multiple scenario runs, until lib is reloaded.
    @param name the name of the option to be set
    @param value the value to assign to the option
    @return 0 if successful, -1 if not
    */
    SE_DLL_API int SE_SetOptionValuePersistent(const char *name, const char *value);
    /**
    Get option value
    @param name the name of the option whose value to fetch
    @return value of the option
    */
    SE_DLL_API const char *SE_GetOptionValue(const char *name);
    /**
    Get option value
    @param enum_value (index) value option whose value to fetch (see CommonMini/EnumConfig.hpp::esmini_options::CONFIG_ENUM)
    @return value of the option
    */
    SE_DLL_API const char *SE_GetOptionValueByEnum(unsigned int enum_value);
    /**
            Register a function and optional argument (ref) to be called back from esmini after ParameterDeclarations has been parsed,
            but before the scenario is initialized, i.e. before applying the actions in the Init block. One use-case is to
            set parameter values for initial entity states, e.g. s value in lane position. So this callback will happen just
            after parameters has been parsed, but before they are applied, providing an opportunity to control the initial
            states via API.
            Registered init callbacks are not automatically cleared between SE_Init calls.
            @param fnPtr A pointer to the function to be invoked. Set 0/NULL to clear any registered callback.
            @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    /**
            Register a function and optional parameter (ref) to be called back from esmini after each frame (update of scenario)
            The current state of specified entity will be returned.
            Complete or part of the state can then be overridden by calling the SE_ReportObjectPos/SE_ReportObjectRoadPos functions.
            Registered callbacks will be cleared between SE_Init calls.
            @param object_id Handle to the position object (entity)
            @param fnPtr A pointer to the function to be invoked
            @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    /**
    Registers a function to be called back from esmini every time a condition is triggered.
    The name of the respective condition and the current timestamp will be returned.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    */
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    /**
    Registers a function to be called back from esmini every time a StoryBoardElement changes its state.
    The name of the respective StoryBoardElement, the type, state, and full path (parent names delimited by /) will be returned.
    See StoryBoardElement.hpp -> StoryBoardElement class ElementType and State enums for type and state values.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    */
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    /**
    Register a function and optional parameter (ref) to be called back from esmini after each frame (update of scenario)
    The current state of specified entity will be returned.
    Complete or part of the state can then be overridden by calling the SE_ReportObjectPos/SE_ReportObjectRoadPos functions.
    Registered callbacks will be cleared between SE_Init calls.
    @param fnPtr A pointer to the function to be invoked
    @param user_data Optional pointer to a local data object that will be passed as argument in the callback. Set 0/NULL if not needed.
    */
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);