EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs

/*
 * esmini - Environment Simulator Minimalistic
 * https://github.com/esmini/esmini
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) partners of Simulation Scenarios
 * https://sites.google.com/view/simulationscenarios
 */

/*
 * This module provides a generic C# interface/wrapper to the esminiLib shared library
 * simply mirroring the interface in terms of datatypes and functions
 */

using System;
using System.Runtime.InteropServices;

namespace ESMini
{
    /// <summary>
    /// Represents the state of a scenario object at a given point in time.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ScenarioObjectState
    {
        public int id;
        public int model_id;
        public int ctrl_type;
        public double timestamp;
        public double x;
        public double y;
        public double z;
        public double h;
        public double p;
        public double r;
        public double speed;
        public int roadId;
        public int junctionId;
        public double t;
        public int laneId;
        public double s;
        public double laneOffset;
        public double centerOffsetX;
        public double centerOffsetY;
        public double centerOffsetZ;
        public double width;
        public double length;
        public double height;
        public int objectType;
        public int objectCategory;
        public double wheel_angle;
        public double wheel_rotation;
        public int visibilityMask;
    }

    /// <summary>
    /// Contains information about the road network at a specific location.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct RoadInfo
    {
        public double local_pos_x;
        public double local_pos_y;
        public double local_pos_z;
        public double global_pos_x;
        public double global_pos_y;
        public double global_pos_z;
        public double angle;
        public double curvature;
        public double road_heading;
        public double road_pitch;
        public double road_roll;
        public double speed_limit;
        public int junctionId;
        public int roadId;
        public int laneId;
        public double laneOffset;
        public double s;
        public double t;
        public int road_type;
        public int road_rule;
        public int lane_type;
        public double trail_heading;
        public double trail_wheel_angle;
    }

    /// <summary>
    /// State of a simple vehicle model.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct SimpleVehicleState
    {
        public double x;
        public double y;
        public double z;
        public double h;
        public double p;
        public double speed;
        public double wheel_rotation;
        public double wheel_angle;
    }

    /// <summary>
    /// Identifiers for lane boundaries surrounding a lane.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct LaneBoundaryId
    {
        public int far_left_lb_id;
        public int left_lb_id;
        public int right_lb_id;
        public int far_right_lb_id;
    }

    /// <summary>
    /// Represents the difference in position between two objects or locations.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct PositionDiff
    {
        public int dLaneId;
        public double ds;
        public double dt;
        public double dx;
        public double dy;
        [MarshalAs(UnmanagedType.I1)]
        public bool oppositeLanes;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct Center
    {
        public double x_;
        public double y_;
        public double z_;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct Dimensions
    {
        public double width_;
        public double length_;
        public double height_;
    }

    /// <summary>
    /// Represents an oriented bounding box.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct OSCBoundingBox
    {
        public Center center_;
        public Dimensions dimensions_;
    }

    /// <summary>
    /// Data for a specific wheel of a vehicle.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct WheelData
    {
        public double x;
        public double y;
        public double z;
        public double h;
        public double p;
        public double friction_coefficient;
        public int axle;
        public int index;
    }

    /// <summary>
    /// Information about a road sign.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct RoadSign
    {
        public int id;
        public IntPtr name; // const char*
        public double x;
        public double y;
        public double z;
        public double h;
        public double s;
        public double t;
        public int orientation;
        public double z_offset;
        public double length;
        public double height;
        public double width;
    }

    /// <summary>
    /// Validity record for a road object (e.g., sign), defining the lanes it applies to.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct RoadObjValidity
    {
        public int fromLane;
        public int toLane;
    }

    /// <summary>
    /// Represents an image buffer.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct Image
    {
        public int width;
        public int height;
        public int pixelSize;
        public int pixelFormat;
        public IntPtr data; // unsigned char*
    }

    /// <summary>
    /// Information about a point along a route.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct RouteInfo
    {
        public double x;
        public double y;
        public double z;
        public double h;
        public int roadId;
        public int junctionId;
        public int laneId;
        public int osiLaneId;
        public double laneOffset;
        public double s;
        public double t;
    }

    /// <summary>
    /// A generic parameter key-value pair.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct Parameter
    {
        public string name;
        public string value;
    }

    /// <summary>
    /// A generic variable key-value pair.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct Variable
    {
        public string name;
        public string value;
    }

    // Helper structs for OverrideActionList
    [StructLayout(LayoutKind.Sequential)]
    public struct ActionStatus
    {
        [MarshalAs(UnmanagedType.I1)] public bool active;
        public double maxRate;
        public int type;
        public double value;
        public int value_type;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct GearActionStatus
    {
        [MarshalAs(UnmanagedType.I1)] public bool active;
        public double number;
        public int type;
        public int value_type;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct ClutchActionStatus
    {
        [MarshalAs(UnmanagedType.I1)] public bool active;
        public double value;
        public double maxRate;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct ThrottleActionStatus
    {
        [MarshalAs(UnmanagedType.I1)] public bool active;
        public double value;
        public double maxRate;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct SteeringActionStatus
    {
        [MarshalAs(UnmanagedType.I1)] public bool active;
        public double maxRate;
        public double maxTorque;
        public double value;
    }

    /// <summary>
    /// List of override actions currently active on an object.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct OverrideActionList
    {
        public ActionStatus brake;
        public ActionStatus parkingBrake;
        public GearActionStatus gear;
        public ClutchActionStatus clutch;
        public ThrottleActionStatus throttle;
        public SteeringActionStatus steeringWheel;
    }

    public static class ESMiniLib
    {
        private const string LIB_NAME = "esminiLib";
        private const CallingConvention CALL_CONV = CallingConvention.Cdecl;

        /// <summary>
        /// Adds a path to the list of paths searched for resources (e.g., models, catalogs).
        /// </summary>
        /// <param name="path">The directory path to add.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddPath(string path);

        /// <summary>
        /// Clears all added resource search paths.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_ClearPaths();

        /// <summary>
        /// Sets the file path for the log file.
        /// </summary>
        /// <param name="logFilePath">The full path to the log file.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetLogFilePath(string logFilePath);

        /// <summary>
        /// Sets the file path for the recording (.dat) file.
        /// </summary>
        /// <param name="datFilePath">The full path to the .dat file.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetDatFilePath(string datFilePath);

        /// <summary>
        /// Gets the current seed used for random number generation.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern uint SE_GetSeed();

        /// <summary>
        /// Sets the seed for random number generation.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetSeed(uint seed);

        /// <summary>
        /// Sets a boolean option flag (equivalent to setting it to "true").
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOption(string name);

        /// <summary>
        /// Unsets an option flag.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_UnsetOption(string name);

        /// <summary>
        /// Sets an option with a specific value.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOptionValue(string name, string value);

        /// <summary>
        /// Sets a persistent option flag that survives scenario resets.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOptionPersistent(string name);

        /// <summary>
        /// Sets a persistent option value that survives scenario resets.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOptionValuePersistent(string name, string value);

        /// <summary>
        /// Gets the value of an option.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOptionValue(string name);

        /// <summary>
        /// Gets an option value by its enum identifier.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOptionValueByEnum(uint enum_value);
